test mkdocs.yml with keys out of order

--- a/docs/binary-tree/250.md
+++ b/docs/binary-tree/250.md
@@ -5,13 +5,5 @@ hide:
 # 250 - Count Univalue Subtrees
 
 ```py linenums="1"
-def bubble_sort(items):
-    for i in range(len(items)):
-        for j in range(len(items) - 1 - i):
-            if items[j] > items[j + 1]:
-                items[j], items[j + 1] = items[j + 1], items[j]
-```
-
-```py
---8<-- "hello.py"
+--8<-- "leetcode-solutions/binary-tree/250-count-univalue-subtrees/solution.py"
 ```
