--- a/docs/binary-tree/250.md
+++ b/docs/binary-tree/250.md
@@ -5,5 +5,10 @@ hide:
 # 250 - Count Univalue Subtrees
 
 ```py linenums="1"
---8<-- "leetcode-solutions/binary-tree/250-count-univalue-subtrees/solution.py"
+# --8<-- "leetcode-solutions/binary-tree/250-count-univalue-subtrees/solution.py"
+class Node:
+    def __init__(self, val):
+        self.val = val
+        self.left = None
+        self.right = None
 ```
